--- a/source/less/global/container.less
+++ b/source/less/global/container.less
@@ -22,7 +22,7 @@
 
   &--padding {
     @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
-      padding: 0 70px;
+      padding: 0 68px 0 70px;
     }
   }
 }
