--- a/source/less/blocks/heading-secondary.less
+++ b/source/less/blocks/heading-secondary.less
@@ -4,13 +4,17 @@
     content: "";
     position: absolute;
     margin-left: 22px;
-    top: 15px;
+    top: 16px;
     width: 100vw;
     height: 2px;
     background-color: @basic-green;
 
     @media (min-width: @tablet-width) {
       margin-left: 36px;
+      top: 22px;
+    }
+
+    @media (min-width: @desktop-width) {
       top: 22px;
     }
   }
@@ -25,11 +29,15 @@
     }
 
     @media (min-width: @desktop-width) {
-      left: -700px;
+      left: -686px;
     }
   }
 
   &--col-1::after {
-    margin-left: 56px;
+    margin-left: 46px;
+
+    @media (min-width: @desktop-width) {
+      margin-left: 40px;
+    }
   }
 }
