--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -19,19 +19,19 @@
 
   @media (min-width: @desktop-width) {
     width: 245px;
-    min-height: 512px;
+    min-height: 511px;
   }
 
   &--all {
     grid-template-columns: 1fr;
     position: relative;
-    padding-top: 73px;
+    padding-top: 80px;
     min-height: 158px;
 
     @media (min-width: @tablet-width) {
       margin-top: 81px;
       padding: 0 79px;
-      padding-top: 151px;
+      padding-top: 158px;
       height: 429px;
       background: transparent;
       border: 2px solid @basic-grey;
@@ -39,20 +39,28 @@
 
     @media (min-width: @desktop-width) {
       padding: 0 39px;
-      padding-top: 151px;
+      padding-top: 158px;
     }
   }
 }
 
 .product__title {
   grid-column: ~"2/3";
+  margin-top: 21px;
+  margin-bottom: 12px;
   padding-right: 65px;
 
   @media (min-width: @tablet-width) {
+    margin: 0;
     padding: 0;
     width: 145px;
     text-align: center;
-    margin-bottom: 21px;
+    margin-bottom: 10px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 12px;
+    padding-left: 9px;
   }
 }
 
@@ -60,16 +68,34 @@
   display: flex;
   justify-content: center;
   grid-row: ~"1/3";
-  padding-top: 32px;
+  padding-top: 33px;
 
   @media (min-width: @tablet-width) {
     display: flex;
-    flex-direction: column-reverse;
-    justify-content: flex-start;
+    // flex-direction: column-reverse;
+    // justify-content: flex-start;
     align-items: center;
+    margin-bottom: 37px;
+    padding-top: 39px;
     width: 162px;
     height: 206px;
     order: -1;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 26px;
+  }
+
+  &--max {
+    padding-top: 31px;
+
+    @media (min-width: @tablet-width) {
+      padding-top: 19px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding-top: 0;
+    }
   }
 }
 
@@ -82,7 +108,7 @@
 
 .product__image--max img {
   @media (min-width: @tablet-width) {
-    // width: 168px;
+    width: 168px;
     height: 207px;
   }
 }
@@ -96,20 +122,21 @@
   &::after {
     content: "";
     position: absolute;
-    top: 39px;
+    top: 41px;
     left: 125px;
     width: 30px;
     height: 1px;
     background-color: @special-grey-6;
 
     @media (min-width: @tablet-width) {
-      top: 82px;
-      left: 128px;
+      top: 81px;
+      left: 130px;
       width: 60px;
     }
 
     @media (min-width: @desktop-width) {
-      left: 90px;
+      top: 80px;
+      left: 91px;
     }
   }
 
@@ -118,7 +145,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 25px;
+    margin-bottom: 24px;
   }
 }
 
@@ -134,17 +161,22 @@
     font-size: 20px;
     line-height: 24px;
   }
+
+  @media (min-width: @desktop-width) {
+    line-height: 22px;
+  }
 }
 
 .product__parameters {
-  margin-bottom: 22px;
+  margin-bottom: 19px;
   font-size: 12px;
   line-height: 16px;
   color: @special_dark-grey;
+  border-collapse: collapse;
 
   @media (min-width: @tablet-width) {
     width: 251px;
-    margin-bottom: 33px;
+    margin-bottom: 32px;
     font-size: 16px;
     border-collapse: collapse;
   }
@@ -160,7 +192,7 @@
 
     @media (min-width: @tablet-width) {
       width: 167px;
-      margin-bottom: 93px;
+      margin-bottom: 89px;
     }
   }
 }
@@ -192,6 +224,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    margin-bottom: 0;
     width: 168px;
   }
 
