--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -14,7 +14,7 @@
     width: 100%;
     height: 302px;
 
-    background-color: #64a73c; // сделать функцией
+    background-color: @bg-promo;
 
     @media (min-width: @tablet-width) {
       background: none;
@@ -35,9 +35,14 @@
   z-index: 2;
   padding-top: 27px;
 
-  background-image: url("../img/promo-bg-img-m1.png");
+  background-image: url("../img/promo-bg-img-m.png");
   background-repeat: no-repeat;
   background-position: 50% 0;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/promo-bg-img-m@2x.png");
+    background-size: 320px 302px;
+  }
 
   @media (min-width: @tablet-width) {
     padding-left: 87px;
