--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -28,3 +28,4 @@
 @status-error: rgba(255, 130, 130, 1);
 @bg-promo-desktop: rgba(100, 167, 59, 1);
 @range-track: rgba(220, 220, 220, 1);
+@bg-promo: rgba(100, 167, 59, 1);
