--- a/source/less/blocks/select-programm.less
+++ b/source/less/blocks/select-programm.less
@@ -1,5 +1,5 @@
 .select-programm-wrapper {
-  margin-bottom: 30px;
+  margin-bottom: 28px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 45px;
@@ -26,7 +26,7 @@
 }
 
 .select-programm__wrapper-block {
-  padding-top: 31px;
+  padding-top: 29px;
   padding-right: 20px;
   padding-bottom: 21px;
   padding-left: 20px;
@@ -54,7 +54,7 @@
     @media (max-width: @mobile-width-only) {
       content: "";
       position: absolute;
-      top: 22px;
+      top: 21px;
       left: 13px;
       width: 68px;
       height: 54px;
@@ -92,7 +92,7 @@
     @media (max-width: @mobile-width-only) {
       content: "";
       position: absolute;
-      top: 24px;
+      top: 23px;
       left: 13px;
       width: 68px;
       height: 52px;
@@ -126,7 +126,7 @@
 .select-programm__title {
   margin: 0;
   margin-left: 11px;
-  margin-bottom: 29px;
+  margin-bottom: 30px;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
@@ -156,8 +156,8 @@
 .select-programm__description {
   position: relative;
   margin: 0;
-  margin-bottom: 42px;
-  width: 227px;
+  margin-bottom: 43px;
+  // width: 227px;
 
   color: @special_dark-grey;
 
