--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -50,6 +50,11 @@
   margin-bottom: 12px;
   padding-right: 65px;
 
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+
   @media (min-width: @tablet-width) {
     margin: 0;
     padding: 0;
@@ -66,18 +71,17 @@
 
 .product__image {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
   grid-row: ~"1/3";
-  padding-top: 33px;
+  margin-bottom: 10px;
 
   @media (min-width: @tablet-width) {
     display: flex;
-    // flex-direction: column-reverse;
-    // justify-content: flex-start;
-    align-items: center;
+    justify-content: center;
     margin-bottom: 37px;
     padding-top: 39px;
-    width: 162px;
     height: 206px;
     order: -1;
   }
@@ -87,10 +91,8 @@
   }
 
   &--max {
-    padding-top: 31px;
-
     @media (min-width: @tablet-width) {
-      padding-top: 19px;
+      padding-top: 15px;
     }
 
     @media (min-width: @desktop-width) {
