--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -2,9 +2,21 @@
   font-size: 16px;
   color: @special_dark-grey;
   text-decoration: none;
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .copyright__logo {
   width: 27px;
   height: 34px;
+}
+
+.copyright__logo-icon:hover path {
+  fill: @basic-green;
+}
+
+.copyright__logo-icon:active path {
+  opacity: 0.3;
 }
