--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -34,7 +34,7 @@
 .form__field {
   position: relative;
   margin: 0;
-  margin-bottom: 21px;
+  margin-bottom: 22px;
   padding: 0;
   border: none;
 
@@ -78,6 +78,8 @@
   }
 
   &--comment {
+    margin-bottom: 21px;
+
     @media (min-width: @tablet-width) {
       margin-bottom: 64px;
     }
@@ -88,7 +90,7 @@
   }
 
   &--additional {
-    margin-bottom: 37px;
+    margin-bottom: 39px;
 
     @media (min-width: @tablet-width) {
       margin-bottom: 60px;
@@ -159,7 +161,7 @@
   }
 
   &--additional {
-    margin-bottom: 41px;
+    margin-bottom: 39px;
 
     @media (min-width: @tablet-width) {
       margin-bottom: 64px;
@@ -219,7 +221,10 @@
 
 .form__checkbox-wrapper {
   position: relative;
-  margin-bottom: 23px;
+  margin-bottom: 25px;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 42px;
@@ -324,6 +329,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .form__checkbox-label {
+  position: relative;
   padding-left: 46px;
   color: @basic-black;
   cursor: pointer;
@@ -336,7 +342,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .form__checkbox-input + .form__checkbox-label::before {
   content: "";
   position: absolute;
-  top: -6px;
+  top: -3px;
   left: 0;
   width: 30px;
   height: 30px;
@@ -351,7 +357,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .form__checkbox-input:checked + .form__checkbox-label::after {
   content: "";
   position: absolute;
-  top: 3px;
+  top: 6px;
   left: 6px;
   width: 18px;
   height: 14px;
