--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -383,9 +383,9 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .form__input {
   margin-left: 14px;
-  // padding-top: 10px; // 13
+  padding-top: 13px;
   padding-right: 33px;
-  // padding-bottom: 11px; // 14
+  padding-bottom: 14px;
   padding-left: 15px;
   width: 100%;
   height: 47px;
@@ -399,7 +399,7 @@ input[type="number"]::-webkit-inner-spin-button {
     padding-top: 12px;
     padding-right: 13px;
     padding-bottom: 14px;
-    padding-left: 13px;
+    padding-left: 14px;
     outline: none;
     border: 2px solid @special_dark-grey;
 
@@ -516,6 +516,8 @@ input[type="number"]::-webkit-inner-spin-button {
   padding-left: 13px;
 
   width: 280px;
+  height: 150px;
+  resize: none;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
@@ -532,7 +534,7 @@ input[type="number"]::-webkit-inner-spin-button {
     padding-top: 8px;
     padding-right: 11px;
     padding-bottom: 8px;
-    padding-left: 11px;
+    padding-left: 12px;
     outline: none;
     border: 2px solid @special_dark-grey;
   }
