--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -81,7 +81,7 @@
     margin-bottom: 21px;
 
     @media (min-width: @tablet-width) {
-      margin-bottom: 64px;
+      margin-bottom: 63px;
     }
 
     @media (min-width: @desktop-width) {
@@ -335,7 +335,7 @@ input[type="number"]::-webkit-inner-spin-button {
   cursor: pointer;
 
   @media (min-width: @tablet-width) {
-    padding-left: 59px;
+    padding-left: 58px;
   }
 }
 
@@ -349,6 +349,8 @@ input[type="number"]::-webkit-inner-spin-button {
   border: 1px solid @special-grey;
 
   @media (min-width: @tablet-width) {
+    top: -7px;
+    left: -1px;
     width: 40px;
     height: 40px;
   }
@@ -550,6 +552,11 @@ input[type="number"]::-webkit-inner-spin-button {
     width: 100%;
     font-size: 20px;
     line-height: 30px;
+
+    &:focus {
+      padding-left: 16px;
+      padding-right: 16px;
+    }
   }
 }
 
