Оптимизация графики всех страниц

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -79,13 +79,11 @@
 
 .page-header__logo {
   padding-top: 10px;
-  // padding-right: 65px;
   margin-right: 65px;
   padding-bottom: 13px;
   padding-left: 18px;
 
   @media (min-width: @tablet-width) {
-    // padding-right: 95px;
     margin-right: 95px;
     padding: 0;
   }
@@ -104,4 +102,12 @@
     width: 202px;
     height: 59px;
   }
+}
+
+.page-header__logo-icon[href]:hover {
+  opacity: 0.8;
+}
+
+.page-header__logo-icon[href]:active {
+  opacity: 0.6;
 }
