--- a/source/less/style.less
+++ b/source/less/style.less
@@ -30,5 +30,4 @@
 @import "blocks/product.less";
 @import "blocks/map.less";
 @import "blocks/heading-secondary.less";
-
-// body { background: rgb(173, 216, 230);}
+@import "blocks/icon.less";
