--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -441,26 +441,6 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 }
 
-// .form__input-email {
-//   background-image: url("../img/svg/icon-email.svg");
-//   background-repeat: no-repeat;
-//   background-position: 93% 50%;
-
-//   @media (min-width: @tablet-width) {
-//     background-position: 97% 50%;
-//   }
-// }
-
-// .form__input-phone {
-//   background-image: url("../img/svg/icon-phone.svg");
-//   background-repeat: no-repeat;
-//   background-position: 94% 50%;
-
-//   @media (min-width: @tablet-width) {
-//     background-position: 97% 50%;
-//   }
-// }
-
 .form__input-icon-email {
   position: absolute;
   right: 16px;
@@ -487,28 +467,31 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 }
 
-.form__input-email:hover + .form__input-icon-email line {
+.form__input-email:focus + .form__input-icon-email line {
   stroke: @basic-green;
 }
 
-.form__input-email:hover + .form__input-icon-email path {
+.form__input-email:focus + .form__input-icon-email path {
   stroke: @basic-green;
 }
 
-.form__input-phone:hover + .form__input-icon-phone path {
+.form__input-phone:focus + .form__input-icon-phone path {
   fill: @basic-green;
 }
+
+// Валидация полей
 
 .form__input-required {
   border-color: @status-error;
 }
 
-.form__input-required + .form__input-icon-email line {
+.form__input-required line {
   stroke: @status-error;
 }
 
-.form__input-required + .form__input-icon-email path {
+.form__input-required path {
   stroke: @status-error;
+  fill: @status-error;
 }
 
 .form__textarea {
