--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -165,22 +165,22 @@
     color: @basic-white;
   }
 
-  &:hover {
+  &:hover[href] {
     color: rgba(@basic-black, 0.6);
   }
 
-  &:active {
+  &:active[href] {
     color: rgba(@basic-black, 0.3);
   }
 }
 
 .main-nav__item-desktop-pseudo {
   @media (min-width: @desktop-width) {
-    &:hover a {
+    &:hover a[href] {
       color: rgba(@basic-white, 0.6);
     }
 
-    &:active a {
+    &:active a[href] {
       color: rgba(@basic-white, 0.3);
     }
   }
