--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -31,6 +31,12 @@
   }
 }
 
+.page-footer__col-2 {
+  @media (min-width: @tablet-width) {
+    margin-left: 30px;
+  }
+}
+
 .page-footer__col-3 {
   display: flex;
   justify-content: space-between;
@@ -45,4 +51,12 @@
   @media (min-width: @desktop-width) {
     gap: 22px;
   }
+}
+
+.page-footer__logo:hover {
+  opacity: 0.8;
+}
+
+.page-footer__logo:active {
+  opacity: 0.6;
 }
