--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  gap: 33px;
+  gap: 34px;
   margin: 0;
   margin-bottom: 22px;
   padding: 0;
@@ -15,8 +15,41 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
-    gap: 28px;
+    gap: 24px;
     padding: 0;
     border: none;
+  }
+}
+
+.social__item {
+  &--vkontakte {
+    align-self: center;
+  }
+
+  &--instagram {
+    align-self: center;
+  }
+}
+
+.social__link {
+  &--vkontakte svg {
+    @media (min-width: @tablet-width) {
+      width: 30px;
+      height: 22px;
+    }
+  }
+
+  &--instagram svg {
+    @media (min-width: @tablet-width) {
+      width: 23px;
+      height: 23px;
+    }
+  }
+
+  &--facebook svg {
+    @media (min-width: @tablet-width) {
+      width: 28px;
+      height: 33px;
+    }
   }
 }
