--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,4 +1,3 @@
-
 // Viewports
 
 @mobile-width-only: 767px;
@@ -10,14 +9,14 @@
 
 @basic-white: rgba(255, 255, 255, 1);
 @basic-black: rgba(0, 0, 0, 1);
-@special-black: rgba(17, 17, 17, 1); //текст title в адресе
+@special-black: rgba(17, 17, 17, 1);
 @basic-green: rgba(104, 183, 56, 1);
 @basic-green-2: rgba(94, 170, 47, 1);
 @basic-grey: rgba(242, 242, 242, 1);
 @special-grey: rgba(205, 205, 205, 1);
-@special-grey-2: rgba(230, 230, 230, 1); //border в мобил меню
-@spesial-grey-3: rgba(217, 217, 217, 1); //полоса в блоке программ и в футере
-@special-grey-4: rgba(234, 234, 234, 1); //bg блок с примером
+@special-grey-2: rgba(230, 230, 230, 1);
+@spesial-grey-3: rgba(217, 217, 217, 1);
+@special-grey-4: rgba(234, 234, 234, 1);
 @special-grey-5: rgba(235, 235, 235, 1);
 @special-grey-6: rgba(211, 211, 211, 1);
 @special-border-input: rgba(231, 231, 231, 1);
@@ -29,3 +28,8 @@
 @bg-promo-desktop: rgba(100, 167, 59, 1);
 @range-track: rgba(220, 220, 220, 1);
 @bg-promo: rgba(100, 167, 59, 1);
+@sh-slide: rgba(0, 0, 0, 0.16);
+@sh-slide-hov: rgba(0, 0, 0, 0.19);
+@sh-slide-act: rgba(0, 0, 0, 0.2);
+@slide-toggle: rgba(0, 0, 0, 0.24);
+@slide-toggle-hov: rgba(0, 0, 0, 0.4);
