Вынос иконок полей формы в спрайт

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -467,13 +467,13 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 }
 
-.form__input-email:focus + .form__input-icon-email line {
-  stroke: @basic-green;
-}
+// .form__input-email:focus + .form__input-icon-email line {
+//   stroke: @basic-green;
+// }
 
-.form__input-email:focus + .form__input-icon-email path {
-  stroke: @basic-green;
-}
+// .form__input-email:focus + .form__input-icon-email path {
+//   stroke: @basic-green;
+// }
 
 .form__input-phone:focus + .form__input-icon-phone path {
   fill: @basic-green;
