--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,7 +1,7 @@
 .social__list {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  flex-wrap: wrap;
   gap: 34px;
   margin: 0;
   margin-bottom: 22px;
@@ -17,6 +17,7 @@
     margin-bottom: 0;
     gap: 24px;
     padding: 0;
+    width: 130px;
     border: none;
   }
 }
