Исправления в свг спрайте

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -11,4 +11,20 @@
 .copyright__logo {
   width: 27px;
   height: 34px;
+
+  svg {
+    fill: @logo-academy;
+  }
+
+  &:hover {
+    svg {
+      fill: @basic-green;
+    }
+  }
+
+  &:active {
+    svg {
+      fill-opacity: 0.3;
+    }
+  }
 }
