--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -41,6 +41,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 164px;
 
   @media (min-width: @tablet-width) {
     justify-content: flex-end;
