Внесение в разметку webp, доработки после проверки на переполнение контента

--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -7,8 +7,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 25px;
     width: 324px;
-    min-height: 511px;
+    min-height: 472px;
     background: linear-gradient(
       to bottom,
       @basic-white 81px,
@@ -32,7 +33,8 @@
       margin-top: 81px;
       padding: 0 79px;
       padding-top: 158px;
-      height: 429px;
+      padding-bottom: 20px;
+      min-height: 429px;
       background: transparent;
       border: 2px solid @basic-grey;
     }
@@ -40,6 +42,7 @@
     @media (min-width: @desktop-width) {
       padding: 0 39px;
       padding-top: 158px;
+      padding-bottom: 38px;
     }
   }
 }
