--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -176,8 +176,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    // grid-template-columns: repeat(4, 1fr);
     grid-template-columns: 27% 26% 27% 20%;
+    grid-row-gap: 40px;
   }
 }
 
@@ -483,13 +483,13 @@ input[type="number"]::-webkit-inner-spin-button {
 
 // Валидация полей
 
-.form__input-required {
+.form__input--invalid {
   border-color: @status-error;
 }
 
-.form__input-required + svg * {
+.form__input--invalid + svg * {
   stroke: @status-error;
-  // fill: @status-error;
+  fill: @status-error;
 }
 
 .form__textarea {
