--- a/source/less/blocks/select-programm.less
+++ b/source/less/blocks/select-programm.less
@@ -127,6 +127,7 @@
   margin: 0;
   margin-left: 11px;
   margin-bottom: 30px;
+  padding-left: 5px;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
@@ -160,18 +161,6 @@
 
   color: @special_dark-grey;
 
-  @media (max-width: @mobile-width-only) {
-    &::after {
-      content: "";
-      position: absolute;
-      top: 112px;
-      left: 0;
-      width: 240px;
-      height: 1px;
-      background-color: @spesial-grey-3;
-    }
-  }
-
   @media (min-width: @tablet-width) {
     margin-bottom: 52px;
     width: 340px;
@@ -199,6 +188,18 @@
 
   text-transform: uppercase;
   text-decoration: none;
+
+  @media (max-width: @mobile-width-only) {
+    &::before {
+      content: "";
+      position: absolute;
+      top: -21px;
+      left: 0;
+      width: 240px;
+      height: 1px;
+      background-color: @spesial-grey-3;
+    }
+  }
 
   @media (min-width: @tablet-width) {
     width: 168px;
