--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -12,7 +12,9 @@
     z-index: -1;
 
     width: 100%;
-    height: 302px;
+    height: calc(100% - 178px);
+    min-height: 302px;
+
 
     background-color: @bg-promo;
 
@@ -102,7 +104,7 @@
 
 .promo__image {
   position: absolute;
-  top: 167px;
+  bottom: 43px;
   left: 0;
   z-index: 2;
   width: 280px;
