Добавление фокуса интерактивным элементам

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -17,10 +17,11 @@
     background-color: @basic-green-2;
   }
 
+  &:focus {
+    background-color: @basic-green-2;
+  }
+
   &:active {
     color: rgba(@basic-white, 0.3);
   }
 }
-
-
-// @basic-green-2
