--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -104,7 +104,8 @@
   }
 }
 
-.page-header__logo-icon[href]:hover {
+.page-header__logo-icon[href]:hover,
+.page-header__logo-icon[href]:focus {
   opacity: 0.8;
 }
 
