--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -214,8 +214,6 @@
   justify-content: space-between;
 
   @media (min-width: @tablet-width) {
-    // display: flex;
-    // justify-content: space-between;
     padding-top: 9px;
     padding-bottom: 5px;
     border-bottom: 1px solid @special-grey;
@@ -245,6 +243,10 @@
     color: @special_dark-grey;
 
     &:hover {
+      background-color: @special-grey-5;
+    }
+
+    &:focus {
       background-color: @special-grey-5;
     }
 
