--- a/source/less/blocks/select-programm.less
+++ b/source/less/blocks/select-programm.less
@@ -226,7 +226,8 @@
     }
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     &::after {
       width: 32px;
       background-image: url("../img/svg/arrow-long.svg");
