--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -59,6 +59,10 @@
       stroke: @basic-green;
     }
 
+    &:focus {
+      stroke: @basic-green;
+    }
+
     &:active {
       stroke-opacity: 0.3;
     }
@@ -69,6 +73,12 @@
   }
 
   &:hover {
+    svg {
+      fill: @basic-green;
+    }
+  }
+
+  &:focus {
     svg {
       fill: @basic-green;
     }
