--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -169,6 +169,10 @@
     color: rgba(@basic-black, 0.6);
   }
 
+  &:focus[href] {
+    color: rgba(@basic-black, 0.6);
+  }
+
   &:active[href] {
     color: rgba(@basic-black, 0.3);
   }
@@ -177,6 +181,10 @@
 .main-nav__item-desktop-pseudo {
   @media (min-width: @desktop-width) {
     &:hover a[href] {
+      color: rgba(@basic-white, 0.6);
+    }
+
+    &:focus a[href] {
       color: rgba(@basic-white, 0.6);
     }
 
