Исправление ошибок по валидатору

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -420,10 +420,10 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 
   @media (min-width: @tablet-width) {
-    margin-left: 17px;
-    // padding-top: 10px;
+    padding-top: 10px;
     padding-right: 18px;
-    // padding-bottom: 11px;
+    padding-bottom: 11px;
+    margin-left: 17px;
     padding-left: 18px;
     height: 52px;
   }
