--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -50,7 +50,9 @@
 }
 
 .main-nav--nojs .main-nav__list {
-  display: block;
+  @media (max-width: @mobile-width-only) {
+    display: block;
+  }
 }
 
 .main-nav--opened .main-nav__toggle {
